Leetcode 1982 Find Array Given Subset Sums
Signed-off-by: neojou <neojou@gmail.com>

--- a/1982_find_array_given_subset_sums/Makefile
+++ b/1982_find_array_given_subset_sums/Makefile
@@ -1,7 +1,7 @@
-PROJECT := listnode 
+PROJECT := subset 
 
 CC := clang++
-OBJS := listnode.o
+OBJS := subset.o
 
 CFLAGS := -arch x86_64 --std=c++11
 LIB := -L /usr/lib
